<resources>
    <string name="app_name">AppMovPractica1</string>

    //-----Header y Footer-----
    <string name="texto_header_1">Aplicaciones Móviles</string>
    <string name="texto_header_2">Roberto Mendoza Vélez - 2024(1)</string>

    //-----Botones-----
    <string name="texto_boton_1">Ejercicio 1</string>
    <string name="texto_boton_2">Ejercicio 2</string>
    <string name="texto_boton_3">Ejercicio 3</string>
    <string name="texto_boton_4">Ejercicio 4</string>
    <string name="texto_boton_5">Ejercicio 5</string>
    <string name="texto_boton_6">Ejercicio 6</string>
    <string name="texto_boton_7">Ejercicio 7</string>
    <string name="texto_boton_8">Ejercicio 8</string>
    <string name="texto_boton_9">Ejercicio 9</string>
    <string name="texto_boton_10">Ejercicio 10</string>
        //--Boton Calcular--
        <string name="texto_boton_calcular">CALCULAR</string>
        //--Boton Verificar--
        <string name="texto_boton_verificar">VERIFICAR</string>
        //--Boton Ordenar--
        <string name="texto_boton_ordenar">ORDENAR</string>


    //-----TextView vacio para mostrar-----
    <string name="texto_resultado_vacio">  </string>

    //-----Ejercicio 1-----
    <string name="texto_ejercicio1">Ejercicio 1</string>
    <string name="texto1_ingreso_ejer1">Ingrese la temperatura:</string>
    <string name="texto_hint_ingreso_ejer1">En grados Celsius</string>
    <string name="texto1_resultado_ejer1">La temperatura en Farenheit es: </string>

    //-----Ejercicio 2-----
    <string name="texto_ejercicio2">Ejercicio 2</string>
    <string name="texto1_ingreso_ejer2">Ingrese la altura: </string>
    <string name="texto2_ingreso_ejer2">Ingrese el peso:</string>
    <string name="texto1_hint_ingreso_ejer2">En centimetros</string>
    <string name="texto2_hint_ingreso_ejer2">En kilogramos</string>
    <string name="texto1_resultado_ejer2">El IMC es: </string>

    //-----Ejercicio 3-----
    <string name="texto_ejercicio3">Ejercicio 3</string>
    <string name="texto1_ingreso_ejer3">Ingrese el precio del producto: </string>
    <string name="texto2_ingreso_ejer3">Ingrese el % de descuento:</string>
    <string name="texto1_hint_ingreso_ejer3">USD</string>
    <string name="texto2_hint_ingreso_ejer3">%</string>
    <string name="texto1_resultado_ejer3">El precio final del producto es: $</string>

    //-----Ejercicio 4-----
    <string name="texto_ejercicio4">Ejercicio 4</string>
    <string name="texto1_ingreso_ejer4">Ingrese el valor en Dolares: </string>
    <string name="texto1_hint_ingreso_ejer4">USD</string>
    <string name="texto1_resultado_ejer4">El valor en euros es de: $</string>
    <string name="texto2_resultado_ejer4">El valor en libras esterlinas es de: $</string>
    <string name="texto3_resultado_ejer4">El valor en pesos argentinos es de: $</string>
    <string name="texto4_resultado_ejer4">El valor en pesos mexicanos es de: $</string>
    <string name="texto5_resultado_ejer4">El valor en pesos colombianos es de: $</string>

    //-----Ejercicio 5-----
    <string name="texto_ejercicio5">Ejercicio 5</string>
    <string name="texto1_ingreso_ejer5">Ingrese el lado A: </string>
    <string name="texto2_ingreso_ejer5">Ingrese el lado B:</string>
    <string name="texto1_hint_ingreso_ejer5">Cateto A</string>
    <string name="texto2_hint_ingreso_ejer5">Cateto B</string>
    <string name="texto1_resultado_ejer5">La Hipotenusa es: </string>

    //-----Ejercicio 6-----
    <string name="texto_ejercicio6">Ejercicio 6</string>
    <string name="texto1_ingreso_ejer6">Ingrese un número: </string>
    <string name="texto1_hint_ingreso_ejer6">Ingrese un número</string>
    <string name="texto1_resultado_ejer6">El número ingresado es: </string>

    //-----Ejercicio 7-----
    <string name="texto_ejercicio7">Ejercicio 7</string>
    <string name="texto1_ingreso_ejer7">Ingrese un número: </string>
    <string name="texto1_hint_ingreso_ejer7">Ingrese un número</string>
    <string name="texto1_resultado_ejer7">Números ordenados: </string>
    //-----Ejercicio 8-----
    <string name="texto_ejercicio8">Ejercicio 8</string>
    <string name="texto1_ingreso_ejer8">Ingrese un número: </string>
    <string name="texto1_hint_ingreso_ejer8">Ingrese un número</string>
    <string name="texto1_resultado_ejer8">El cubo del número ingresado es: </string>

    //-----Ejercicio 9-----
    <string name="texto_ejercicio9">Ejercicio 9</string>
    <string name="texto1_ingreso_ejer9">Ingrese un número: </string>
    <string name="texto1_hint_ingreso_ejer9">Ingrese un número</string>
    <string name="texto1_resultado_ejer9">El promedio es: </string>

    //-----Ejercicio 10-----
    <string name="texto_ejercicio10">Ejercicio 10</string>
    <string name="texto1_ingreso_ejer10">Ingrese el tiempo recorrido:</string>
    <string name="texto2_ingreso_ejer10">Ingrese el tiempo de espera:</string>
    <string name="texto_hint_ingreso_ejer10">En minutos</string>
    <string name="texto1_resultado_ejer10">El precio final de la carrera es: </string>
</resources>
